# Latex-Note-Generator

./: .gitignore  CMakeLists.txt  Latex-Note-Generator.sln  README.md
Latex-Note-Generator/: Latex-Note-Generator.vcxproj  Latex-Note-Generator.vcxproj.filters  LatexGenerator.cpp  LatexGenerator.hpp  Main.cpp  Main.hpp
Latex-Note-Generator/Debug/: Project1.exe.recipe
Latex-Note-Generator/x64/Debug/: Latex-Note-Generator.exe.recipe  vc142.idb
Latex-Note-Generator/x64/Debug/Latex-No.9e7a9204.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Latex-Note-Generator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Latex-Note-Generator/x64/Release/: Latex-Note-Generator.exe.recipe
Latex-Note-Generator/x64/Release/Latex-No.9e7a9204.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Latex-Note-Generator.lastbuildstate  Latex-Note-Generator.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: Latex-Note-Generator.ilk
x64/Release/: Latex-Note-Generator.ipdb
